--- a/index_style.css
+++ b/index_style.css
@@ -18,6 +18,10 @@ body {
     line-height: 24px;
 }
 
+img {
+    border-radius: 50%;
+    border: 2px solid white;
+  }
 
 #grid {
     display: grid;
@@ -39,7 +43,7 @@ section {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row: auto;
-    
+
     margin: auto;
     
 }
